feat: add OpenAPI/Swagger API documentation
- Add OpenApiConfig class with comprehensive API documentation
- Configure JWT Bearer authentication scheme for Swagger UI
- Update SecurityConfiguration to allow /api-docs/** endpoints
- Enhance CORS configuration for better API access
- Update application.yml with OpenAPI properties
- Refactor SecurityConfiguration code formatting